--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 14)
 
 include_directories(.)
 
-add_executable(push_swap main.c push_swap.h list_functions.c operations.c)
+add_executable(push_swap main.c push_swap.h list_functions.c operations.c useful_functions_forstack.c)
