--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,6 +1,8 @@
+
 NAME = libft.a
 
-SRCS =	ft_min.c			ft_putstr.c			ft_strrchr.c		ft_strncmp.c	\
+SRCS =  ft_get_next_line.c\
+		ft_min.c			ft_putstr.c			ft_strrchr.c		ft_strncmp.c	\
 		ft_max.c			ft_strchr.c			ft_strnstr.c		ft_strncat.c	\
 		ft_atoi.c			ft_strsub.c			ft_strlcat.c		ft_strjoin.c	\
 		ft_itoa.c			ft_strequ.c			ft_lstsize.c		ft_dlstsize.c	\
@@ -19,18 +21,17 @@ SRCS =	ft_min.c			ft_putstr.c			ft_strrchr.c		ft_strncmp.c	\
 		ft_strcat.c			ft_strncpy.c		ft_toupper.c		ft_dlstappend.c	\
 		ft_strdup.c			ft_dlstnew.c		ft_strtrim.c		ft_lstpopback.c	\
 		ft_strclr.c			ft_dlstadd.c		ft_strsplit.c		ft_putchar_fd.c	\
-		                											ft_putendl_fd.c	\
-																	ft_reverse_str.c\
-																	ft_get_next_line.c
+																	ft_putendl_fd.c	\
+																	ft_reverse_str.c
 
 OBJ = $(SRCS:.c=.o)
 
 FLAGS = -Wall -Wextra -Werror -Iincludes
 
 $(NAME):
-	@gcc $(FLAGS) -c $(SRCS)
-	@ar rcs $(NAME) $(OBJ)
-	@ranlib $(NAME)
+	gcc $(FLAGS) -c $(SRCS)
+	ar rcs $(NAME) $(OBJ)
+	ranlib $(NAME)
 
 all: $(NAME)
 
@@ -43,6 +44,3 @@ fclean: clean
 re: fclean all
 
 f: fclean
-
-infol:
-	@cat info_list.txt
