--- a/push_swap_pr/CMakeLists.txt
+++ b/push_swap_pr/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.14)
-project(push_swap)
+project(push_swap_pr)
 
 set(CMAKE_CXX_STANDARD 14)
 
 include_directories(.)
 
-add_executable(push_swap push_swap.c push_swap.h list_functions.c operations_for_singlestack.c useful_functions_forstack.c operations_for_bothstacks.c)
-target_link_libraries(push_swap ${CMAKE_SOURCE_DIR}/libft/libft.a)
+add_executable(push_swap_pr push_swap.c push_swap.h list_functions.c operations_for_singlestack.c
+        useful_functions_forstack.c operations_for_bothstacks.c
+        parsing.c)
+target_link_libraries(push_swap_pr ${CMAKE_SOURCE_DIR}/libft/libft.a)
